--- a/webtech/index.html
+++ b/webtech/index.html
@@ -234,7 +234,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Java Web Servlets</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid" src="img/js.gif" alt="">
-              <p class="mb-5">A servlet is a java programming language class that extends the attributes for the servers to host the applications that is being accessed in a request-response paradigm. A java servlet allows the web server to be accessed by web developers in a simpler or efficient way in business systems. In addition, it serves as a Java platform technology provided in a component-based, platform-independent method in the structure of web-based application.</p>
+              <p class="mb-5">A servlet is a java programming language class that extends the attributes for the servers to host the applications that is being accessed in a request-response paradigm. In addition, a java servlet allows the web server to be accessed by web developers in a simpler or efficient way in business systems. It serves as a Java platform technology provided in a component-based, platform-independent method in the structure of web-based application.</p>
               <br>
               <figure>
                  <video width="100%" height="auto" controls="">
@@ -244,7 +244,7 @@
              </figure>
             <br>
               <h2>Java Server Pages</h2>
-              <p class="mb-5">The technology provides easy and fast development for web developers and web designers in a dynamic web page that has an advantage for business systems. Java Server Pages is platform independent meaning, it could be on any operating system without requiring the Java Virtual Machine(JVM). The technology separates the User Interface(UI) from the content and enables web designers to change the layout of the web page without changing the primary dynamic content.
+              <p class="mb-5">The technology provides easy and fast development for web developers and web designers in a dynamic web page that has an advantage for business systems. Java Server Pages is platform independent meaning, it could be on any operating system without requiring the Java Virtual Machine(JVM). Moreover, the technology separates the User Interface(UI) from the content and enables web designers to change the layout of the web page without changing the primary dynamic content.
               </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
