Changes in our website. The register section was removed.

--- a/webtech/index.html
+++ b/webtech/index.html
@@ -45,10 +45,7 @@
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Register</a>
-            </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="login.html">Login</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="login.html">Logout</a> 
             </li>
           </ul>
         </div>
@@ -60,8 +57,8 @@
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" id="scis" src="img/logo.png" alt="">
         <h1 class="text-uppercase mb-0">WEB SYSTEMS AND TECHNOLOGIES</h1>
-        <hr class="star-light">
-        <h3 class="font-weight-light mb-0">By: Kyrie Cerezo, Brian Daclison, Ojoj Dela Cruz,<br> Von Manaois, Jeremiah Pimentel, Von Salazar </h3>
+		<br>
+        <h4 class="font-weight-light mb-0">By: Kyrie Cerezo, Brian Daclison, Ojoj Dela Cruz,<br> Von Manaois, Jeremiah Pimentel, Von Salazar </h4>
       </div>
     </header>
 
@@ -69,7 +66,7 @@
     <section class="portfolio" id="portfolio">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Topics</h2>
-        <hr class="star-dark mb-5">
+		<br><br>
         <div class="row">
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
@@ -139,7 +136,7 @@
     <section class="bg-primary text-white mb-0" id="about">
       <div class="container">
         <h2 class="text-center text-uppercase text-white">About</h2>
-        <hr class="star-light mb-5">
+		<br>
         <div class="row">
           <div class="col-lg-4 ml-auto">
             <p class="lead">This website contains summary for the final period topics including JSP, PHP, Python, and ASP.Net. The Web Application security was based on OWASP Top 10 Web Application Security Risks of 2017 </p>
@@ -150,63 +147,7 @@
         </div>
       </div>
     </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Register</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Phone Number</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-         <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Username</label>
-                  <input class="form-control" id="username" type="text" placeholder="Username" required="required" data-validation-required-message="Please enter username.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Password</label>
-                  <input class="form-control" id="password" type="password" placeholder="Password" required="required" data-validation-required-message="Please create a password.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Register</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-
+	
     <div class="copyright py-4 text-center text-white">
       <div class="container">
         <small>Copyright &copy; Webtech 2018</small>
